fix(style): fixes bugs due to overflow

--- a/ui/app/components/app/permission-page-container/index.scss
+++ b/ui/app/components/app/permission-page-container/index.scss
@@ -156,7 +156,6 @@
   align-items: center;
   text-align: center;
   color: $Black-100;
-  height: 114px;
 
   &__icons {
     display: flex;
